Fixed a problem with the tahiti mini browser in order to see the local documentation.